--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ xhr.onload = function() {
   var json = JSON.parse(this.responseText);
   for (var i = 0; i < json.length; ++i) {
     var data = json[i];
-    var row = "<p>{name}</p><p>{circle}</p><p>{day}</p><p>{location}</p><p>{r18}</p><p>{genre}</p><p>{price}</p><p><a href=”{url}” target=”_blank”>{url}</a></p>";
+    var row = "<p>{name}</p><p>{circle}</p><p>{day}</p><p>{location}</p><p>{r18}</p><p>{genre}</p><p>{price}</p><p><a href=\"{url}\" target=”_blank”>{url}</a></p>";
     var div = document.createElement("div");
     div.style.display = "table-row"
     div.innerHTML = format(row, {name: data.name, circle: data.circle, day: data.day, location: data.location, r18: data.r18, genre: data.genre, price: data.price, url: data.url});
