--- a/index.html
+++ b/index.html
@@ -2,8 +2,16 @@
 <html lang="ja">
 <head>
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 <style>
+.alt-table-responsive {
+    width: 100%;
+    overflow-y: hidden;
+    overflow-x: auto;
+    -ms-overflow-style: -ms-autohiding-scrollbar;
+    -webkit-overflow-scrolling: touch;
+}
 h1 {
   font-size: 36px;
   font-weight: 500;
@@ -24,11 +32,9 @@ h1 {
   vertical-align: middle;
   padding: 8px;
 }
-
 #table #t-head p {
   text-align: center;
   border-bottom: solid 2px #DDD;
-  font-weight: bold;
 }
 </style>
 <title>コミックマーケット89シャロシコ本情報</title>
@@ -45,7 +51,7 @@ h1 {
 <p>名前</p><p>サークル</p><p>日程</p><p>場所</p><p>R-18</p><p>ジャンル</p><p>値段(円)</p><p>URL</p>
 </div>
 </div>
-
+</div>
 </div>
 </div>
 </div>
