--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@ h1 {
 <p>名前</p><p>サークル</p><p>日程</p><p>場所</p><p>R-18</p><p>ジャンル</p><p>値段(円)</p><p>URL</p>
 </div>
 </div>
-</div>
-</div>
+<div class="footer">
+<p style="color:rgba(0,0,0,0.55555);text-align:center;margin-top:10px;"><a href="https://syaroshi.co/">syaroshi.co</a>特別企画。作成：桐間紗路</p>
 </div>
 </div>
 <script>
