--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+<link rel="stylesheet" href="bootstrap.min.css">
 <style>
 .alt-table-responsive {
     width: 100%;
@@ -43,8 +43,7 @@ h1 {
 <div class="col-xs-12 col-md-offset-1 col-md-10">
 <h1 style="text-align:center;">コミックマーケット89シャロシコ本情報</h1>
 <div style="margin:10px;text-align:center;">
-<a href="https://twitter.com/share" class="twitter-share-button"{count} data-via="sudosan" data-size="large" data-hashtags="C89">Tweet</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='//platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+<a class="btn btn-primary btn-lg" href="https://twitter.com/intent/tweet?hashtags=C89&original_referer=https%3A%2F%2Fc89.syaroshi.co%2F&ref_src=twsrc%5Etfw&text=%E3%82%B3%E3%83%9F%E3%83%83%E3%82%AF%E3%83%9E%E3%83%BC%E3%82%B1%E3%83%83%E3%83%8889%E3%82%B7%E3%83%A3%E3%83%AD%E3%82%B7%E3%82%B3%E6%9C%AC%E6%83%85%E5%A0%B1&tw_p=tweetbutton&url=https%3A%2F%2Fc89.syaroshi.co%2F&via=sudosan" target="_blank">ツイート</a>
 </div>
 <div id="table">
 <div id="t-head">
